--- a/courses/da361a/exercises/L07.md
+++ b/courses/da361a/exercises/L07.md
@@ -161,7 +161,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
 
         def print_messages(uname):
             ''' Our method that will print out all the messages from a user '''
-            user = User.get(username=uname)
+            user = User.get(User.username == uname)
             for msg in user.messages:
                 print(msg.message)
     ```
