making the text more consistent

--- a/courses/da361a/exercises/L07.md
+++ b/courses/da361a/exercises/L07.md
@@ -88,7 +88,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
 4. Create a class for Message(s) that inherits from your BaseClass and has the attributes described above. 
 
     ``` python
-        Class User(BaseModel):
+        Class User(BaseMoel):
             ...
             #users messages will be accessible as a special attribute, User.messages
             user = pw.ForeignKeyField(User, backref='messages')
@@ -147,7 +147,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
 
 8. Create a few Mweets - messages.Because the messages are connected with a foreign key to the user, you will first need to find the reference to the user that the message belongs to.
     ``` python
-            # we find out the reference to the user
+        # we find out the reference to the user
         user_ref = User.get(User.username == username)
 
         msg = Mweet(user=user_ref, message=msg, likes=0)
@@ -156,7 +156,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
     ```
     Verify that the messages get stored in your database! 
 
-9. Create a method print_messages(username:string) which prints out all of the messages for a given user. Note that you can use the backreference "messages" that you specified in the Mweet class to access them.
+9. Create a method print_messages(username:string) which prints out all of the messages for a given user. Note that you can use the back-reference "messages" that you specified in the Mweet class to access them.
     ``` python
 
         def print_messages(uname):
@@ -167,7 +167,8 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
     ```
 
 ### Extra challenges
-Below are a number of extra challenges that you can attempt in case you've completed the lab above.
+
+Below are a number of extra challenges that you can attempt next.
 
 1. Implement password attribute for a user as an encrypted md5 field
 2. Implement a method update_user(username, **kvargs) which takes a username as an input and updates whatever was passed in **kvargs, and saves the changes to the database.
