--- a/courses/da361a/exercises/L07.md
+++ b/courses/da361a/exercises/L07.md
@@ -55,7 +55,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
 
 1. Understand what foreign keys are, and how they are used. You can use this example here: <http://www.databasedev.co.uk/primary_foreign_key_constraints.html>  
 
-2. Create a BaseClass where you inherit from peewee model and where you set the use of a database in the Meta nested class.
+2. Create a BaseModel where you inherit from peewee model and where you set the use of a database in the Meta nested class.
 
     A good practice to start is to define a BaseModel in which you configure common attributes for its child classes. In this way, classes that will inherit from BaseModel will already have the database (and any other attributes that you set) known.
 
@@ -63,7 +63,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
     import peewee as pw
     mautter_db = pw.SqliteDatabase("mautter.db")
 
-    class BaseClass(pw.Model):
+    class BaseModel(pw.Model):
         ''' This is the base class from which all our other classes will inherit 
             The benefit of having a common class is that we don't have to set the configuration in every other class.
         '''
@@ -75,7 +75,7 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
     ```
     If you encounter an ImportError it means that either flask or peewee was not found and may not be installed correctly. Check the Installing and Testing document for instructions on installing peewee. <http://docs.peewee-orm.com/en/latest/peewee/installation.html#installation>
 
-3. Create a class for User(s) that inherits from your BaseClass and has the attributes described above.
+3. Create a class for User(s) that inherits from your BaseModel and has the attributes described above.
 
     Help yourself with the slides from the lecture. A data type for attributes could be pw.CharField(), however, you can find many other data types here: <http://docs.peewee-orm.com/en/latest/peewee/models.html#field-types-table>
 
@@ -85,12 +85,12 @@ The Malmö University twitter app (MAUtter) should have a class in which you des
         ...
     ```
 
-4. Create a class for Message(s) that inherits from your BaseClass and has the attributes described above. 
+4. Create a class for Message(s) that inherits from your BaseModel and has the attributes described above. 
 
     ``` python
-        Class User(BaseMoel):
+        Class User(BaseModel):
             ...
-            #users messages will be accessible as a special attribute, User.messages
+            # users' messages will be accessible as a special attribute, User.messages
             user = pw.ForeignKeyField(User, backref='messages')
             ....
     ```
