Added example solution

--- a/courses/da361a/exercises/L04.md
+++ b/courses/da361a/exercises/L04.md
@@ -35,6 +35,6 @@ Det finns fyra stycken klasser som tillsammans utgör programmet. Den slutgiltig
 
 ## Bilagor
 
-<!--[Klicka här för att ladda ner exempellösningen](/assets/zip/labb4_oop_da361a.zip)-->
+[Klicka här för att ladda ner exempellösningen](/assets/zip/labb4_oop_da361a.zip)
 
 ![Sekvensdiagram](/assets/img/da361a_labb4_sequence_diagram.png) _Sekvensdiagram_
