Added extra lecture

--- a/courses/da361a/lectures/F06.md
+++ b/courses/da361a/lectures/F06.md
@@ -6,109 +6,212 @@ code: da361a
 
 # Python - Extra
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/rpbsg0KF75Rql3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/AntonTibblin/ht17-da361a-oop-extra" title="HT17- DA361A - OOP, extra" target="_blank">HT17- DA361A - OOP, extra</a> </strong> from <strong><a href="https://www.slideshare.net/AntonTibblin" target="_blank">Anton Tibblin</a></strong> </div>
-
-[Klicka här för att ladda ner PDF:n](/assets/pdf/Extra-WS.pdf)
+Länkar till tidigare (och dagens) workshops:
+- [Zoo](https://docs.google.com/document/d/1BMxJLZDPKi1R80kM9xvAMddoZ-PgMsmzyiQuIONESiU/edit)
+- [Förskolesystem](http://webshare.mah.se/tsanti/Preschool.md.html)
+- [Blogg](http://webshare.mah.se/tsanti/blogg.md.html)
 
 ## Dagens exempel
 
-### Ex.1 Klassattribut/klassmetoder
+### Ex.1 Klassattribut/klassmetoder/statistiska metoder
 
 {% highlight python linenos %}
-class Player:
+class School:
 
-    team = None
-    positions = ["Anfallare", "Mittfältare", "Back", "Målvakt"]
-    players = []
-
-    def __init__(self, name, position, age):
-        self.name = name
-        self.position = position
-        self.age = age
-
-        Player.players.append(self)
-
-    @classmethod
-    def print_players(cls):
-        for player in cls.players:
-            print(player)
-
-    @classmethod
-    def import_from_file(cls, filename):
-        with open(filename) as file:
-            file_content = file.read().split(";")
-            name = file_content[0]
-            position = file_content[1]
-            age = file_content[2]
-
-            Player(name, position, age)
-
-    @staticmethod
-    def validate_position(position):
-        if position in Player.positions:
-            return True
-        else:
-            return False
-
-
-    @staticmethod
-    def validate_name(name):
-        if len(name) > 0:
-            return True
-        else:
-            return False
-
-    def __str__(self):
-        return "{}({}): {}".format(self.name, self.age, self.position)
-
-
-Player("Anton", "Ytter", 28)
-Player("Kalle", "Back", 22)
-Player.import_from_file("test.txt")
-Player.print_players()
-{% endhighlight %}
-
-# Ex.2 Aggregation/Composition
-
-{% highlight python linenos %}
-class Player:
-
-    def __init__(self, name, position, age):
-        self.name = name
-        self.position = position
-        self.age = age
-
-class Team:
+    schools = []
 
     def __init__(self, name):
-        self.name = name
-        self.players = []
+        self.__name = name
+        self.students = []
+        self.courses = []
+        self.teachers = []
+        self.open = False
 
-    def add_player(self, player):
-        self.players.append(player)
+        School.schools.append(self)
 
+    def get_name(self):
+        return self.__name
 
-teams = []
-teams.append(Team("Dream team"))
-print(teams[0].players)
-teams[0].add_player(Player("Anton", "Ytter", 28))
-print(teams[0].players)
+    def open_school(self):
+        self.open = True
 
-teams.pop()
+    def close_school(self):
+        self.open = False
 
-print(teams)
+    @classmethod
+    def print_schools(cls):
+        for school in cls.schools:
+            print(school)
 
+    @staticmethod
+    def print_schools2():
+        for school in School.schools:
+            print(school)
+
+    @classmethod
+    def create_from_json(cls, file_name):
+        my_file = open(file_name, "r")
+        school_data = json.loads(my_file)
+        school_name = school_data["name"]
+        return cls(name)
+
+    @staticmethod
+    def validate_date(date):
+        if date = ....:
+            return True
+        else:
+            return False
+    
+    def __str__(self):
+        if self.open == True:
+            return "{}: is open".format(self.__name)
+        else:
+            return "{}: is closed".format(self.__name)
+        
+schools = [School("Malmö universitet")]
+
+schools.append(School("Lunds universitet"))
+
+School.print_schools()
+School.print_schools2()
 
 '''
-Player("Anton", "Ytter", 28)
-team1 = Team("Dream team")
-print(team1.players)
-team1.players.append(Player.players[0])
-print(team1.players)
-print(Player.players)
-team1.players = []
-print(team1.players)
-print(Player.players)
+for school in schools:
+    print(school.location)
 '''
+
+'''
+my_school.open_school()
+School.open_school(my_school)
+
+print(my_school)
+
+# Kalla på en klassmetod
+School.create_from_json("school.json")
+
+# Kalla på en statisk metod
+School.validate_date("2020-10-10")
+'''
+
+{% endhighlight %}
+
+### Ex.2 Polymorfism
+
+{% highlight python linenos %}
+class School:
+
+    def __init__(self, name, type_of_school):
+        self.__name = name
+        self.students = []
+        self.courses = []
+        self.teachers = []
+        self.type_of_school = type_of_school
+        self.open = False
+        
+    def get_name(self):
+        return self.__name
+
+    def open_school(self):
+        self.open = True
+
+    def close_school(self):
+        self.open = False
+
+    def get_grade(self, points):
+        if points > 85:
+            return "MVG"
+        elif points > 70:
+            return "VG"
+        elif points > 50:
+            return "G"
+        else:
+            return "U"
+
+    def __str__(self):
+        if self.open == True:
+            return "{} ({}): is open".format(self.__name, self.type_of_school)
+        else:
+            return "{} ({}): is closed".format(self.__name, self.type_of_school)
+        
+
+class University(School):
+
+    def __init__(self, name):
+        super().__init__(name, "University")
+
+
+    def get_grade(self, points):
+        if points > 75:
+            return "VG"
+        elif points > 50:
+            return "G"
+        else:
+            return "U"
+
+
+class HighSchool(School):
+
+    def __init__(self, name):
+        super().__init__(name, "High School")
+
+    def get_grade(self, points):
+        if points > 90:
+            return "A"
+        elif points > 80:
+            return "B"
+        elif points > 70:
+            return "C"
+        elif points > 60:
+            return "D"
+        elif points > 50:
+            return "E"
+        else:
+            return "F"
+
+class PeopleSchool(School):
+
+    def __init__(self, name):
+        super().__init__(name, "People School")
+
+
+
+class MiddleSchool(School):
+
+    def __init__(self, name):
+        super().__init__(name, "Middle School")
+
+    def get_grade(self, points):
+        return "You have passed the examn, as always"
+
+class CheckString:
+
+    @staticmethod
+    def is_long_string(string):
+        if len(string) > 10:
+            return True
+        return False
+
+    @staticmethod
+    def is_short_string(string):
+        if len(string) < 10:
+            return True
+        return False
+    
+
+print(CheckString.is_long_string("Anton"))
+print(CheckString())
+
+        
+schools = []
+schools.append(University("Malmö universitet"))
+schools.append(HighSchool("Polhemskolan"))
+schools.append(MiddleSchool("Centralskolan"))
+schools.append(PeopleSchool("Folkets skola"))
+
+for school in schools:
+    print(school)
+
+for school in schools:
+    print(school.get_grade(76))
 
 {% endhighlight %}
