Lade till föreläsning 3 och en föreläsningssida

--- a/courses/da361a/lectures/F02.md
+++ b/courses/da361a/lectures/F02.md
@@ -1,253 +1,10 @@
 ---
 layout: instructions
-title: Python 1
+title: Introduktion till UML, OOAD & OOP, del 2
 code: da361a
 ---
 
-# Repetion av Python
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/sZbu0iwlEWSGEc" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/johanholmberg1/introduktion-till-uml-ooad-oop-del-2" title="Introduktion till UML, OOAD &amp; OOP, del 2" target="_blank">Introduktion till UML, OOAD &amp; OOP, del 2</a> </strong> from <strong><a href="https://www.slideshare.net/johanholmberg1" target="_blank">Johan Holmberg</a></strong> </div>
 
-## Dagens kod 1) Textbaserat
+[Klicka här för att ladda ner PDF:n](/assets/pdf/lecture3.pdf)
 
-### app.py
-
-{% highlight python linenos %}
-import json
-import random
-
-def app():
-    choice = False
-    while choice != "0":
-        print_menu()
-        choice = input("Ange val: ")
-        if choice == "1":
-            translate_user_input()
-        elif choice == "2":
-            add_word()
-        elif choice == "0":
-            break
-        else:
-            print("Du måste ange ett giltigt val")
-            
-    print("Hejdå!")
-
-def print_menu():
-    print("*"*40)
-    print("Meny")
-    print("*"*40)
-    print("1) Översätt till fjortiz")
-    print("2) Lägg till ord i ordlistan")
-    print("0) Avsluta")
-
-def read_dict(file_name):
-    try:
-        with open(file_name) as data_file:
-            return json.load(data_file)
-    except:
-        print("Kunde inte öppna filen, programmet avslutas")
-        exit()
-
-def change_dot(fjortiz_dict):
-    dot_endings = fjortiz_dict["random"]
-    return " {}.".format(random.choice(dot_endings))
-    
-
-def translate_user_input():
-    input_text = input("Ange den text som du vill göra om: ").lower()
-
-    fjortiz_dict = read_dict("fjortiz.json")
-    
-    # 1) ändra ord rakt av
-    for word in fjortiz_dict["words"]:
-        input_text = input_text.replace(word, fjortiz_dict["words"][word])
-
-    # 2) särskiva valda ord
-    for word in fjortiz_dict["separate"]:
-        input_text = input_text.replace(word, word+" ")
-
-    # 3) lägg till ord vid punkter
-    input_text = input_text.replace(".", change_dot(fjortiz_dict))
-
-    # Skriv ut resultatet
-    print("-"*40)
-    print(input_text)
-
-def add_word():
-    word = input("Ange ord som du vill byta ut: ").lower()
-    new_word = input("Ange översättning i fjortizspråk: ").lower()
-
-    fjortiz_dict = read_dict("fjortiz.json")
-    fjortiz_dict["words"][word] = new_word
-
-    save_dict_to_file("fjortiz.json", fjortiz_dict)
-
-def save_dict_to_file(file_name, new_dict):
-    try:
-        file = open(file_name, "w")
-        file.write(json.dumps(new_dict, indent=4))
-        file.close()
-    except:
-        print("Det gick inte att spara filen")
-        exit()
-
-app()
-{% endhighlight %}
-
-### fjortiz.json
-
-{% highlight json linenos %}
-{
-    "random": [
-        "typ",
-        "liksom",
-        "ba'",
-        "yolo"
-    ],
-    "separate": [
-        "j\u00e4tte",
-        "super",
-        "svin"
-    ],
-    "words": {
-        "vara": "va",
-        "hej": "tjeniz",
-        ", ": ", typ",
-        "kul": "fr\u00e4scht",
-        "okej": "kej",
-        "tusen": "papp",
-        "ok": "okii",
-        "!": " \u00e5 s\u00e5nt!",
-        "puss": "puzz",
-        "bara": "ba'",
-        "?": " \u00e5 s\u00e5nt?",
-        "jag": "ja",
-        "hejd\u00e5": "kjamiz <3<3",
-        "kompis": "chiefen",
-        "kram": "kjamizz",
-        "nyb\u00c3\u00b6rjare": "n00b",
-        "orka": "palla",
-        "cool": "swag",
-        "taskig": "obror",
-        "skolan": "plugget",
-        "fin": "fr\u00e4sch",
-        "najs": "najz"
-    }
-}
-{% endhighlight %}
-
-## Dagens kod 2) Webb-baserat
-
-### bottle_app.py
-
-{% highlight python linenos %}
-from bottle import route, run, template, request
-from fjortiz import translate_user_input
-
-@route('/')
-def index():
-    return template("index", result=False)
-
-@route('/translate', method='POST')
-def translate():
-    user_input = getattr(request.forms, "text")
-    result = translate_user_input(user_input)
-    return template("index", result=result)
-
-run(host='localhost', port=8080, debug=True)
-{% endhighlight %}
-
-### fjortiz.py
-{% highlight python linenos %}
-import json
-import random
-
-def read_dict(file_name):
-    try:
-        with open(file_name) as data_file:
-            return json.load(data_file)
-    except:
-        print("Kunde inte öppna filen, programmet avslutas")
-        exit()
-
-def change_dot(fjortiz_dict):
-    dot_endings = fjortiz_dict["random"]
-    return " {}.".format(random.choice(dot_endings))
-    
-
-def translate_user_input(input_text):
-    input_text = input_text.lower()
-
-    fjortiz_dict = read_dict("fjortiz.json")
-    
-    # 1) ändra ord rakt av
-    for word in fjortiz_dict["words"]:
-        input_text = input_text.replace(word, fjortiz_dict["words"][word])
-
-    # 2) särskiva valda ord
-    for word in fjortiz_dict["separate"]:
-        input_text = input_text.replace(word, word+" ")
-
-    # 3) lägg till ord vid punkter
-    input_text = input_text.replace(".", change_dot(fjortiz_dict))
-
-    return input_text
-
-def add_word():
-    word = input("Ange ord som du vill byta ut: ").lower()
-    new_word = input("Ange översättning i fjortizspråk: ").lower()
-
-    fjortiz_dict = read_dict("fjortiz.json")
-    fjortiz_dict["words"][word] = new_word
-
-    save_dict_to_file("fjortiz.json", fjortiz_dict)
-
-def save_dict_to_file(file_name, new_dict):
-    try:
-        file = open(file_name, "w")
-        file.write(json.dumps(new_dict, indent=4))
-        file.close()
-    except:
-        print("Det gick inte att spara filen")
-        exit()
-{% endhighlight %}
-
-### fjortiz.json
-
-{% highlight json linenos %}
-{
-    "random": [
-        "typ",
-        "liksom",
-        "ba'",
-        "yolo"
-    ],
-    "separate": [
-        "j\u00e4tte",
-        "super",
-        "svin"
-    ],
-    "words": {
-        "vara": "va",
-        "hej": "tjeniz",
-        ", ": ", typ",
-        "kul": "fr\u00e4scht",
-        "okej": "kej",
-        "tusen": "papp",
-        "ok": "okii",
-        "!": " \u00e5 s\u00e5nt!",
-        "puss": "puzz",
-        "bara": "ba'",
-        "?": " \u00e5 s\u00e5nt?",
-        "jag": "ja",
-        "hejd\u00e5": "kjamiz <3<3",
-        "kompis": "chiefen",
-        "kram": "kjamizz",
-        "nyb\u00c3\u00b6rjare": "n00b",
-        "orka": "palla",
-        "cool": "swag",
-        "taskig": "obror",
-        "skolan": "plugget",
-        "fin": "fr\u00e4sch",
-        "najs": "najz"
-    }
-}
-{% endhighlight %}
