--- a/courses/da361a/lectures/F03.md
+++ b/courses/da361a/lectures/F03.md
@@ -4,60 +4,106 @@ title: Föreläsning 2
 code: da361a
 ---
 
-# Python - Introducion OOP
+# Python - Repetition
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/HO2YGaftfsFL6N" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/secret/HO2YGaftfsFL6N" title="Python oop class 1" target="_blank">Python oop class 1</a> </strong> from <strong><a href="https://www.slideshare.net/AleksanderFabijan" target="_blank">Aleksander Fabijan</a></strong> </div>
+Nedan är är dagens kod. Vill man ladda ner webbexemplet så kan man göra det <a href="/assets/zip/web-fjortiz.zip">här</a>.
 
+## app.py
 
-## Kod från dagens föreläsning
+```python
+import json
+import random
 
-{% highlight python linenos %}
-class Bus:
-    ''' This is my class definition for a bus'''
-
-    # Class variable counting the number of objects
-    bus_cnt = 0
-
-    def __init__(self, num_seats, color, driver_name, passenger_count):
-        ''' This function is called on object creation '''
-        self.num_seats = num_seats
-        self.color = color
-        self.driver_name = driver_name
-        self.passenger_count = passenger_count
-        # here we increase the class variable counter
-        Bus.bus_cnt = Bus.bus_cnt + 1
-
-    @classmethod
-    def how_many_busses(cls):
-        ''' This is a classmethod - getting the value of the classvariable '''
-        return cls.bus_cnt
-
-    def enter_bus(self, passangers):
-        ''' People entering the bus '''
-        self.passenger_count = self.passenger_count + passangers
-
-    def exit_bus(self, passangers):
-        ''' People exeting the bus '''
-        # if the current number of passengers - exiting passangers < 0, print an error message
-        if self.passenger_count - passangers < 0:
-            print("You are strange!")
+def app():
+    while True:
+        print_menu()
+        user_choice = input("Val: ")
+        if user_choice == "1":
+            translator()
+        elif user_choice == "0":
+            break
         else:
-            # else, do the substraction and remove the passangers
-            self.passenger_count = self.passenger_count - passangers
+            print("Du valde ett felaktigt alternativ, försök igen")
 
+    print("Hejdå, hoppas du hade roligt!")
 
-# Create a few objects from the class instance
-my_first_bus = Bus(55, "blue", "Anton", 0)
-my_second = Bus(10, "blue", "Aleks", 0)
+def translator():
+    user_text = input("Ange text: ").lower()
+    fjortiz_dict = read_dict()
 
-# Print out the object variable passenger_count
-print(my_first_bus.passenger_count)
+    # Ändra ord
+    for word in fjortiz_dict["words"]:
+        user_text = user_text.replace(word, fjortiz_dict["words"][word])
 
-# print out the class variable busses count
-print("Counter: ", Bus.how_many_busses())
+    # Särskrivning
+    for word in fjortiz_dict["separate"]:
+        user_text = user_text.replace(word, word+" ")
 
-# Make a few poeple enter and exit the bus
-my_first_bus.enter_bus(4)
-my_first_bus.enter_bus(2)
-my_first_bus.exit_bus(20)
-{% endhighlight %}
+    # Vid meningens slut
+    user_text = user_text.replace(".", change_dot(fjortiz_dict))
+
+    print("*"*20)
+    print(user_text)
+    print("*")
+
+def change_dot(fjortiz_dict):
+    dot_endings = fjortiz_dict["random"]
+    return " {}.".format(random.choice(dot_endings))
+
+def read_dict():
+    try:
+        with open("fjortiz.json") as data_file:
+            data = json.load(data_file)
+            return data
+    except:
+        print("Kunde inte öppna filen")
+        exit()
+
+def print_menu():
+    print("Meny")
+    print("----")
+    print("1) Mata in mening")
+    print("0) Avsluta")
+
+app()
+```
+
+## fjortiz.json
+
+```json
+{
+    "random": [
+        "typ",
+        "liksom",
+        "ba'",
+        "yolo"
+    ],
+    "separate": [
+        "j\u00e4tte",
+        "super",
+        "svin"
+    ],
+    "words": {
+        "vara": "va",
+        "hej": "tjeniz",
+        ", ": ", typ",
+        "kul": "fr\u00e4scht",
+        "okej": "kej",
+        "tusen": "papp",
+        "ok": "okii",
+        "!": " \u00e5 s\u00e5nt!",
+        "puss": "puzz",
+        "bara": "ba'",
+        "?": " \u00e5 s\u00e5nt?",
+        "jag": "ja",
+        "hejd\u00e5": "kjamiz <3<3",
+        "kompis": "chiefen",
+        "kram": "kjamizz",
+        "nyb\u00c3\u00b6rjare": "n00b",
+        "orka": "palla",
+        "cool": "swag",
+        "taskig": "obror",
+        "dig": "bror"
+    }
+}
+```
