Lade till laboration 2

--- a/courses/da361a/exercises/L01.md
+++ b/courses/da361a/exercises/L01.md
@@ -6,144 +6,76 @@ code: da361a
 
 # Laboration 1
 
-## Introduktion
+## Inför labben
 
-Syftet med laborationen är att börja med repetition i form av procedurell programmering som sedan övergår till objektorienterad programmering där ni avslutningsvis kommer skapa ett klassdiagram över den klass ni gjort.
+Läs igenom fallen nedan innan du kommer till labben. Du behöver inte ha detaljkoll på dem, men det är bra om du i alla fall hunnit bekanta dig med dem innan. Ta också med dig papper och penna – på den här labben behöver du ingen dator.
 
-Tips är att ha övning 1 i en egen pythonfil (t.ex `repetition.py`) och övning 2, 3 och 4 i en annan (t.ex `dog.py`).
-{: .info}
+[Här finns de här instruktionerna som PDF](/assets/pdf/lab1.pdf)
 
-## Övning 1 - Repetition
+## Instruktioner
 
-Skapa en variabel i form av en `dict` (dictionary) med namnet `dog`. Denna ska ha följande nycklar (keys) med valfritt innehåll (value), nedan listas typerna för dessa nycklar:
+Innan vi startar laborationen kommer vi att köra ett upprop. Vi samlas igen kvart över elva och går igenom våra lösningar. Även här tas närvaro. Du räknas som närvarande om du är med under båda uppropen och visat dig aktiv under sessionen.
+Ni arbetar i grupper om mellan tre och fem personer. För att inte fastna för länge med varje fall finns en rekommendation för hur mycket tid som bör läggas på varje fall.
+Fokusera på att rita för hand under laborationen. Det går i allmänhet snabbare att skissa lösningar på papper eller whiteboard än att göra detta digitalt. På laborationen är det viktigare att ni snabbt kan skissa upp lösningar och jämföra, ändra, gå tillbaka och så vidare än att linjerna är perfekta. Om ni blir klara med era uppgifter får ni så klart lov att bygga diagrammen med ett digitalt UML-verktyg.
+Spara det arbete ni gjort på laborationerna. Frågor av den här typen kommer att dyka upp på tentan, och att kunna gå tillbaka och titta på ert tidigare arbete kan hjälpa er att plugga inför den.
 
-* `name` (str) - namnet på hunden (t.ex doug)
-* `breed` (str) - namnet på hundrasen (t.ex pug)
-* `age` (int) - ålder på hunden
-* `asleep` (bool) - om hunden sover eller inte, standardvärde kan vara `False`
-* `colors` (list) - en `list` innehållande färgerna på pälsen
+## Fallbeskrivningar
 
-Efter ni skapat denna variabel ska ni skapa ett antal funktioner, dessa visas nedan med ett tillhörande exempel för hur ni använder dessa. I dessa fall har vi hunden Doug, som är en mops (pug) och är 8år, samt har färgerna svart, vit och beige på sin päls.
+### Fall 1: AI-spelaren (30 minuter)
 
-Tänk på att ni måste dokumentera era funktioner med [docstrings](https://www.python.org/dev/peps/pep-0257/). T.ex:
+Rita ett tillståndsdiagram som visar hur en AI-spelare i ett spel byter strategi beroende på vad som finns i omgivningen. Reglerna för AI-spelaren är enligt nedan:
 
-{% highlight python linenos %}
-def print_person(person):
-    """
-    Prints out relevant user information
-    """
-    pass
-{% endhighlight %}
+* On guard: När ingen fiende finns inom synhåll.
+* Fight: Om det finns en liten fiende inom synhåll så attackeras denna.
+* Run away: Används om IA-spelaren ser en stor fiende eller om AI-spelaren håller på att förlora när en fiende attackerats eller AI-spelaren attackeras.
 
-_Exemplen förutsätter att ni skapat variabeln med namnet "dog"._
+Vilka händelser påverkar spelaren? Vilka tillstånd kan spelaren befinna sig i?
 
-`print_info` - tar emot hunden som ett argument och skriver ut en sträng enligt följande mall:
+### Fall 2: Niagara (75 minuter)
 
-{% highlight python linenos %}
-print_info(dog)
-# => "Woof! I'm Doug the pug (8 years)."
-{% endhighlight %}
+Vi vill göra en modell av Niagara. Utifrån nedanstående text, identifiera de substantiv som borde utgöra baser för klasser och lägg till relevanta attribut och metoder. Glöm inte relationerna!
 
-`is_asleep` - tar emot hunden som argument och returnerar `True` eller `False` om hunden sover eller inte.
+> Niagara är en byggnad som nyttjas av Malmö universitet. Byggnaden är byggd 1998 och ligger på tomterna Niagara 2 och Niagara 3. Den består av tre huskroppar, benämnda A, B och C. Dessa är 7, 8, respektive 13 våningar höga. Varje huskropp servas av två hissar. Hissarna (och dörrarna till byggnaden) är låsta mellan 16.30 och 7.30. Personer med behörighet identifieras med ett ID-kort och kod, som slås in på en koddosa. Hissarna i A-huset är reserverade för personal och kräver alltid identifiering.
 
-{% highlight python linenos %}
-# If-sats som kontrollerar om hunden sover eller inte
-if is_asleep(dog):
-    print(dog["name"], "is sleeping!")
-    # => "Doug is sleeping!"
-else:
-    print(dog["name"], "is awake!")
-    # => "Doug is awake!"
-{% endhighlight %}
+> Under huset finns ett källarplan med ett parkeringshus, vilket drivs av Q-park. Här finns även ett omklädningsrum med dusch och låsbara skåp. Dessa skåp kräver hänglås.
 
-`wake_up` och `sleep` - tar emot hunden som ett argument och ändrar på nycklen "asleep" beroende på om hunden sover eller inte.
+> På entréplan finns tre hörsalar (benämnda B1, B2 och C) och reception med tillhörande vaktmästeri. Här finns även Restaurang Niagara, studentkåren, Drivhuset och Campusbokhandeln.
 
-{% highlight python linenos %}
-# Beroende på om hunden sover eller inte så ändrar vi tillståendet på "asleep" nyckeln
-if is_asleep(dog):
-    wake_up(dog)
-    print(dog["name"], "just woke up!")
-    # => "Doug just woke up!"
-else:
-    sleep(dog)
-    print(dog["name"], "is fast asleep!")
-    # => "Doug is fast asleep!"
-{% endhighlight %}
 
-`print_fur_colors` - tar emot hunden som ett argument och skriver ut en sträng enligt följande mall:
+> Plan två domineras av ett café, ett studentpentry och ytor för möten.
 
-{% highlight python linenos %}
-print_fur_colors(dog)
-# => "Doug has the following fur colors: black, white, beige."
-{% endhighlight %}
+> På plan tre till blandas student- och personalutrymmen. Datorsalarna finns i A-huset på våning tre och fyra. A-huset är i övrigt främst avsett för undervisnings- och seminarieverksamhet. På våning fem och sex huserar institutionerna för teknik och samhälle och kultur och samhälle, deras administration, samt några specialytor för forsknings- och skapandeverksamhet, exempelvis IOTAP-labbet där de eminenta herrarna Daniel Spikol och Johan Holmberg ofta sitter och arbetar.
 
-## Övning 2 - Klass
+> Plan sju och uppåt upplåts helt åt personalutrymmen. Här finns även universitetskansliet där rektor och hennes stab arbetar.
 
-Nu ska ni skapa klassen `Dog` med följande metoder (funktioner):
+> Taket har en takterass med gräsmatta, bänkar och träd. Här finns även en större ventilationstrumma Vid bra väder är utsikten bra och från taket kan man se Öresundsbron, Köpenhamn, Barsebäck och Lund.
 
-* `__init__` - den metod som körs när ni skapar en instans av `Dog`, det räcker med att denna tar emot hundens namn
-* `__str__` - den metod som körs när ni t.ex skriver `print dog` (förutsatt att "dog" är en instans av `Dog`)
+> Eftersom byggnaden är en offentlig byggnad råder totalt rökningsförbud på platsen.
 
-Utgå från mallen nedan, ni ska kunna utföra samma sak (dvs. skapa en hund som `dog` och sedan anropa `print dog` och få ut hundens namn).
+Börja med att läsa texten tillsammans. Identifiera de objekt som är relevanta och förkasta de objekt som är irrelevanta. Tänk på att skriva några stödord kring varför ni gör de val ni gjort – detta är bra att kunna gå tillbaka till under kursen. Identifiera därefter attribut och beteenden (som ni modellerar som metoder) hos objekten och skriv in dessa i ert diagram. Här får ni lov att använda er av er domänkunskap (vilket innebär att ni utnyttjar det faktum att ni känner till byggnaden i fråga) för att lägga till relevanta attribut och beteenden om information om dessa saknas\* i texten. Även här ska ni motivera era beslut. Slutligen tittar ni på hur alla objekt hänger ihop och modellerar dessa relationer. Precis som ovan får ni använda er av er domänkunskap och fylla i de luckor som ni tycker finns.
 
-{% highlight python linenos %}
-# Exempelmall för en klass
+\* I verkligheten hade ni tagit upp dessa luckor med en kund eller stakeholder.
 
-class Phone(object):
-    """
-    Beskrivning av klassen
-    """
+### Fall 3: Använd en TV (75 minuter)
 
-    def __init__(self, model):
-        """
-        Beskrivning av metoden
-        """
-        self.model = model
+Vi ska modellera tre användningsfall för en TV i var sitt sekvensdiagram. Givet nedanstående klassdiagram och beskrivningar, modellera följande:
 
-    def __str__(self):
-        return "Phone model is %s" % (self.model)
+#### Starta Tvn
 
-# Här skapar vi en instans av en klass
-p = Phone("iPhone 6s")
-print(p)
-# => "Phone model is iPhone 6s"
-{% endhighlight %}
+En användare slår på tv:n genom att trycka på Power-knappen på en fjärrkontroll. En boundaryklass Remote tar emot signalen och gör ett asynkront anrop (powerOn) till TVController. TVController anropar då metoden startLastChannel hos sig själv. Denna metod frågar ChannelList om den senast användna kanalen. Metoden sätter därefter tunern med hjälp av kanalens frekvens. Slutligen tänds skärmen, som hämtar en bildström från tunern.
 
-Tänk på att dokumentera era klass och metoder med `docstrings`.
+#### Byta kanal
 
-## Övning 3 - Attribut och metoder
+En användare byter kanal på tv:n genom att trycka på en sifferknapp på en fjärrkontroll. En boundaryklass Remote tar emot signalen och gör ett asynkront anrop (choose med argumentet channel:number) till TVController. TV:n är lite korkad och kan bara byta kanal genom att iterera över hela kanallistan tills rätt kanal hittats. Kanalen identifieras med ett id-nummer, vilket ska matcha sifferknappens värde. När rätt kanal har hittats, sätts tunern med hjälp av kanalens frekvens. Slutligen tänds skärmen, som hämtar en bildström från tunern.
 
-Nu ska ni uppdatera er klass `Dog` med alla de attribut (nycklarna i er `dict`) som användes i övning 1 - placera dessa i `__init__` metoden. Därefter kan ni placera in funktionaliteten från `print_info` i `__str__` metoden. Resterande funktioner som gjordes i övning 1 kan ni konvertera till metoder för er klass. Utöver detta ska ni även lägga till metoden `get_name` som returnerar hundens namn.
+#### Slå av ljudet
 
-Om ni lyckats skriva korrekt kod kan ni pröva exemplet nedan:
+En användare stänger av ljudet på TV:n genom att trycka på mute-knappen på en fjärrkontroll. En boundaryklass Remote tar emot signalen och gör ett asynkront anrop (mute) till TVController. TVController skickar ett meddelande till högtalaren, som då sätter volymen till sig själv till noll.
 
-{% highlight python linenos %}
-# Vår instans av klassen Dog
-dog = Dog("Doug", "Pug", 8, ["black", "white", "beige"])
+Använd de element som vi gått igenom på föreläsningen.
 
-print(dog)
-# => "Woof! I'm Doug the pug (8 years)."
+![Klassdiagram](/assets/img/TV.png)
 
-# Testa gärna att köra dog.sleep() innan if-satsen
-# för att se så att båda delarna ger utskrifter
-if dog.is_asleep():
-    dog.wake_up()
-    print(dog.get_name(), "just woke up!")
-    # => "Doug just woke up!"
-else:
-    dog.sleep()
-    print(dog.get_name(), "is fast asleep!")
-    # => "Doug is fast asleep!"
+## Efter laborationen
 
-dog.print_fur_colors()
-# => "Doug has the following fur colors: black, white, beige."
-
-{% endhighlight %}
-
-## Övning 4 - Iteration
-
-I övning 4 ska ni skapa fem instanser av `Dog` (dvs. fem individuella hundar), dessa ska sparas i listan `dogs`. Ni ska därefter gå igenom denna listan med en `for`-loop och därefter skriva ut information om hunden och hundens päls (`print_fur_colors`).
-
-## Övning 5 - Klassdiagram
-
-Som avslutande övning ska ni skapa ett klassdiagram av er klass `Dog` med valfritt verktyg, som t.ex Adobe Illustrator och Visual Paradigm eller gratisprogram som [DrawIO](https://www.draw.io), Paint, etc.
+Efter laborationen kommer exempeldiagram att läggas upp här.
