Visst ja, labben går på eftermiddagen...

--- a/courses/da361a/exercises/L01.md
+++ b/courses/da361a/exercises/L01.md
@@ -14,7 +14,7 @@ Läs igenom fallen nedan innan du kommer till labben. Du behöver inte ha detalj
 
 ## Instruktioner
 
-Innan vi startar laborationen kommer vi att köra ett upprop. Vi samlas igen kvart över elva och går igenom våra lösningar. Även här tas närvaro. Du räknas som närvarande om du är med under båda uppropen och visat dig aktiv under sessionen.
+Innan vi startar laborationen kommer vi att köra ett upprop. Vi samlas igen kvart över fyra och går igenom våra lösningar. Även här tas närvaro. Du räknas som närvarande om du är med under båda uppropen och visat dig aktiv under sessionen.
 Ni arbetar i grupper om mellan tre och fem personer. För att inte fastna för länge med varje fall finns en rekommendation för hur mycket tid som bör läggas på varje fall.
 Fokusera på att rita för hand under laborationen. Det går i allmänhet snabbare att skissa lösningar på papper eller whiteboard än att göra detta digitalt. På laborationen är det viktigare att ni snabbt kan skissa upp lösningar och jämföra, ändra, gå tillbaka och så vidare än att linjerna är perfekta. Om ni blir klara med era uppgifter får ni så klart lov att bygga diagrammen med ett digitalt UML-verktyg.
 Spara det arbete ni gjort på laborationerna. Frågor av den här typen kommer att dyka upp på tentan, och att kunna gå tillbaka och titta på ert tidigare arbete kan hjälpa er att plugga inför den.
